<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_TransferMoldMachPar_OLD" Id="{097b98b7-080a-4f24-adfb-69ea839ed6af}">
    <Declaration><![CDATA[TYPE ST_TransferMoldMachPar_OLD :
STRUCT

	PositionUpStop						: REAL;	(* Up *)
	PositionUpSlow						: REAL;	(* Slow up *)
	PositionUpCreep						: REAL;
	
	UpCreepSpeed						: REAL; (* Transfer Creep speed*)
	UpSlowSpeed							: REAL;	(* Transfer Slow speed*)
	UpNormalSpeed						: REAL; (* Transfer Normal speed*)
	
	DownSpeed							: REAL; 
	DownSpeedSlow						: REAL;
	DownSpeedCreep						: REAL;
	
	DownOpenSpeed						: REAL; (* Down open, just above the pond *)
	
	PositionStartFormingProcess			: REAL;
	BlowOffTime							: TIME;
	TransferTime						: TIME; (* Time transfer and bottom molds are closed *)
	//UpWaitTime							: TIME;
	FormingTime							: TIME;
	PositionOffsetZero					: REAL;
	PositionOffsetSlowRange				: REAL;
	TravelDownTime						: TIME;
	PositionOffsetAlarm					: REAL;
	PreIngintionDownTime				: TIME;	

	PositionPhyscialMeasured				: REAL;
	PositionPhysicalMeasuredOld				: REAL;
	PhysicalOffsetPos						: REAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>